# internal/routes/user_router.go
@@ -12,8 +12,8 @@ func userRouter(h *handler.Handler) chi.Router {
 	r.Get("/", h.User.UserList)
 	r.Get("/{id}", h.User.GetUser)
 	r.Put("/{id}", h.User.UpdateProfile)
-	r.With(middleware.AdminOnly).Post("/{id}/lock", h.Auth.LockUser)
-	r.With(middleware.AdminOnly).Post("/{id}/unlock", h.Auth.UnLockUser)
+	r.With(middleware.AdminOnly).Post("/{id}/lock", h.User.LockUser)
+	r.With(middleware.AdminOnly).Post("/{id}/unlock", h.User.UnLockUser)
 	r.With(middleware.AdminOnly).Delete("/{id}", h.User.DeleteUser)
 	r.With(middleware.AdminOnly).Delete("/old-soft-deleted", h.User.PermanentlyDeleteOldSoftDeletedUsers)
 
